2013-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Config.swg (val_t_to_sv): Do not set tag if not set.
	* installcheck/Amanda_Config.pl: Fix for tag not set instead of undef.

2013-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* config/automake/scripts.am: Add SCRIPTS_PERL_NO_CHECK
	* config/amanda/json.m4: Define AMANDA_JSON_SERVER. Add --with-json-server, check for json-server
	  and check perl module rependencies.
	* config/amanda/components.m4: Invoke AMANDA_JSON_SERVER
	* perl/Makefile.am: Check json server module conditionally.
	* server-src/Makefile.am: Check amanda.psgi conditionally.
	* perl/Amanda/JSON/RPC/Dispatcher.pm,
	  perl/Amanda/JSON/RPC/Dispatcher/App.pm,
	  perl/Amanda/JSON/RPC/Dispatcher/Procedure.pm,
	  server-src/amanda.psgi.pl: Undo previous patches.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/RPC/Dispatcher/Procedure.pm: Do not require Moose.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/RPC/Dispatcher.pm: Do not require Moose.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amanda.psgi.pl: Do not require Dispacher.pm

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: CURLE_SSL_CACERT_BADFILE is not defined on older
	  curl.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/RPC/Dispatcher.pm: Do not require Log::Any.
	* perl/Amanda/JSON/RPC/Dispatcher/App.pm: Do not require Dispatcher.pm.

2013-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/RPC/Dispatcher.pm: Do not require Plack::Request
	  at compile time.

2013-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry on CURLE_SSL_CACERT_BADFILE.

2013-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/Config.pm, perl/Amanda/JSON/Changer.pm: Remove
	  dependency of Digest/SHA1.

2013-04-24  Jean-Louis Martineau <martineau@zmanda.com>